--- a/JavaWeb-exAvaliacao/WebContent/template/_template.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/template/_template.xhtml
@@ -20,7 +20,7 @@
 		href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
 	<link rel="stylesheet"
 		href="https://designmodo.github.io/Flat-UI/dist/css/flat-ui.min.css" />
-	<link rel="stylesheet" href="resources/css/custom.css" />
+	<link rel="stylesheet" href="../resources/css/custom.css" />
 	<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" />
 
@@ -28,11 +28,11 @@
 		src="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.2.2/js/flat-ui.js" />
 	<script
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKwvaeHolteDKj5kKkg9z1uIXb7kfr-No" />
-	<script src="resources/js/maps.js" />
-	<script src="resources/js/custom.js" />
-	<script src="resources/js/inputmask.js" />
-	<script src="resources/js/jquery.inputmask.js" />
-	<script src="resources/js/inputmask.date.extensions.js" />
+	<script src="../resources/js/maps.js" />
+	<script src="../resources/js/custom.js" />
+	<script src="../resources/js/inputmask.js" />
+	<script src="../resources/js/jquery.inputmask.js" />
+	<script src="../resources/js/inputmask.date.extensions.js" />
 	
 
 
