Feito Query alunoPorProfessor + minor changes

--- a/JavaWeb-exAvaliacao/WebContent/template/_template.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/template/_template.xhtml
@@ -57,7 +57,7 @@
 							<ul class="nav navbar-nav">
 								<li class="active"><a href="#fakelink">Dashboard</a></li>
 								<li><a href="#fakelink">Meus Alunos</a></li>
-								<li><a href="#fakelink">Meus Cursos</a></li>
+								<li><a href="#fakelink">Minhas disciplinas</a></li>
 							</ul>
 
 							<h:form class="navbar-form navbar-right">
@@ -93,17 +93,21 @@
 									data-toggle="dropdown">Cadastrar <b class="caret"></b></a> <span
 									class="dropdown-arrow"></span>
 									<ul class="dropdown-menu">
-										<li><a href="#">Escola</a></li>
-										<li><a href="#">Aluno</a></li>
-										<li><a href="#">Professor</a></li>
+										<li><a href="../cadastro/cadastro-escola.xhtml">Escola</a></li>
+										<li><a href="../cadastro/cadastro-aluno.xhtml">Aluno</a></li>
+										<li><a href="../cadastro/cadastro-professor.xhtml">Professor</a></li>
+										<li><a href="../cadastro/cadastro-curso.xhtml">Curso</a></li>
+										<li><a href="../cadastro/cadastro-disciplina.xhtml">Disciplina</a></li>
 									</ul></li>
 								<li class="dropdown"><a href="#" class="dropdown-toggle"
 									data-toggle="dropdown">Listar <b class="caret"></b></a> <span
 									class="dropdown-arrow"></span>
 									<ul class="dropdown-menu">
-										<li><a href="#">Escola</a></li>
-										<li><a href="#">Aluno</a></li>
-										<li><a href="#">Professor</a></li>
+										<li><a href="../lista/lista-escola.xhtml">Escola</a></li>
+										<li><a href="../lista/lista-aluno.xhtml">Aluno</a></li>
+										<li><a href="../lista/lista-professor.xhtml">Professor</a></li>
+										<li><a href="../lista/lista-curso.xhtml">Curso</a></li>
+										<li><a href="../lista/lista-disciplina.xhtml">Disciplina</a></li>
 									</ul></li>
 							</ul>
 							<h:form class="navbar-form navbar-right">
