--- a/JavaWeb-exAvaliacao/WebContent/template/_template.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/template/_template.xhtml
@@ -21,6 +21,7 @@
 	<link rel="stylesheet"
 		href="https://designmodo.github.io/Flat-UI/dist/css/flat-ui.min.css" />
 	<link rel="stylesheet" href="../resources/css/custom.css" />
+	<link rel="stylesheet" href="../resources/css/sidemenu.css" />
 	<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" />
 
@@ -33,7 +34,10 @@
 	<script src="../resources/js/inputmask.js" />
 	<script src="../resources/js/jquery.inputmask.js" />
 	<script src="../resources/js/inputmask.date.extensions.js" />
-	
+	<script src="../resources/js/sidemenu.js" />
+
+
+
 
 
 </h:head>
@@ -60,7 +64,7 @@
 								<li><a href="#fakelink">Minhas disciplinas</a></li>
 							</ul>
 
-							<h:form class="navbar-form navbar-right">
+							<h:form  style="padding-right:0px; padding-left:0px;" class="navbar-form navbar-right">
 
 								<h:commandButton class="btn btn-success" type="submit"
 									value="Sair" actionListener="#{loginBean.deslogar}" />
@@ -76,7 +80,7 @@
 								<li><a class="active" href="#fakelink">Minhas Notas</a></li>
 							</ul>
 
-							<h:form class="navbar-form navbar-right">
+							<h:form style="padding-right:0px; padding-left:0px;" class="navbar-form navbar-right">
 
 								<h:commandButton class="btn btn-success" type="submit"
 									value="Sair" actionListener="#{loginBean.deslogar}" />
@@ -110,7 +114,7 @@
 										<li><a href="../lista/lista-disciplina.xhtml">Disciplina</a></li>
 									</ul></li>
 							</ul>
-							<h:form class="navbar-form navbar-right">
+							<h:form style="padding-right:0px; padding-left:0px;" class="navbar-form navbar-right">
 
 								<h:commandButton class="btn btn-success" type="submit"
 									value="Sair" actionListener="#{loginBean.deslogar}" />
@@ -121,7 +125,7 @@
 						</c:if>
 						<!-- NOT LOGGED -->
 						<c:if test="#{empty loginType}">
-							<h:form class="navbar-form navbar-right">
+							<h:form style="padding-right:0px; padding-left:0px;"  class="navbar-form navbar-right">
 								<div class="form-group">
 									<h:inputText pa:placeholder="RM:" value="#{loginBean.rm}"
 										styleClass="form-control" placeholder="RM" />
@@ -130,8 +134,9 @@
 									<h:inputText pa:placeholder="Senha" value="#{loginBean.senha}"
 										styleClass="form-control" placeholder="RM" />
 								</div>
-								<h:commandButton class="btn btn-success" type="submit"
-									value="Login" actionListener="#{loginBean.logar}" />
+								<h:commandLink class="btn btn-success" type="submit"
+									value="Login" action="#{loginBean.logar}" />
+									
 							</h:form>
 						</c:if>
 
