--- a/JavaWeb-exAvaliacao/WebContent/template/_template-admin.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/template/_template-admin.xhtml
@@ -52,10 +52,30 @@
 					<div id="navbar" class="navbar-collapse collapse">
 
 					
-							<ul class="nav navbar-nav">
-								<li><a class="active" href="../aluno/aluno-dashboard.xhtml">Dashboard</a></li>
-							</ul>
 
+						
+							<ul class="nav navbar-nav">
+								<li class="dropdown"><a href="#" class="dropdown-toggle"
+									data-toggle="dropdown">Cadastrar <b class="caret"></b></a> <span
+									class="dropdown-arrow"></span>
+									<ul class="dropdown-menu">
+										<li><a href="../cadastro/cadastro-escola.xhtml">Escola</a></li>
+										<li><a href="../cadastro/cadastro-aluno.xhtml">Aluno</a></li>
+										<li><a href="../cadastro/cadastro-professor.xhtml">Professor</a></li>
+										<li><a href="../cadastro/cadastro-curso.xhtml">Curso</a></li>
+										<li><a href="../cadastro/cadastro-disciplina.xhtml">Disciplina</a></li>
+									</ul></li>
+								<li class="dropdown"><a href="#" class="dropdown-toggle"
+									data-toggle="dropdown">Listar <b class="caret"></b></a> <span
+									class="dropdown-arrow"></span>
+									<ul class="dropdown-menu">
+										<li><a href="../lista/lista-escola.xhtml">Escola</a></li>
+										<li><a href="../lista/lista-aluno.xhtml">Aluno</a></li>
+										<li><a href="../lista/lista-professor.xhtml">Professor</a></li>
+										<li><a href="../lista/lista-curso.xhtml">Curso</a></li>
+										<li><a href="../lista/lista-disciplina.xhtml">Disciplina</a></li>
+									</ul></li>
+							</ul>
 							<h:form style="padding-right:0px; padding-left:0px;"
 								class="navbar-form navbar-right">
 
@@ -63,7 +83,7 @@
 									value="Sair" actionListener="#{loginBean.deslogar}" />
 							</h:form>
 							<p class="navbar-text navbar-right">
-								Bem vindo, <a href="#" class="navbar-link">#{displayName}! </a>
+								Bem vindo, <a href="#" class="navbar-link">#{displayName}!  </a>
 							</p>
 						
 
@@ -105,35 +125,45 @@
 
 							<ul id="demo2" class="nav">
 								<li class="active"><a href="#">Menu</a></li>
-
-								<li><a title="Ver Disciplinas deste curso" href="#">#{alunoControleBean.aluno.curso.nome}</a>
+								<li><a href="#">Disciplinas</a>
 									<ul>
 										<ui:repeat
-											value="#{alunoControleBean.aluno.curso.disciplinas}"
+											value="#{professorControleBean.professor.disciplinas}"
 											var="disc">
-
-											<li><h:commandLink title="Ver disciplinas deste curso"
-													action="/aluno/aluno-disciplinaPorCurso"
-													actionListener="#{alunoControleListagemBean.updateDisciplinaSession(disc)}"
+											
+											 <p>Curso id: #{disc.curso.idCurso} Curso nome: #{disc.curso.nome}</p>
+											
+											<li><h:commandLink title="Ver alunos desta disciplina"
+													action="/professor/professor-alunosPorDisciplina"
+													actionListener="#{professorControleListagemBean.updateDisciplinaSession(disc)}"
 													value="#{disc.nome}">
 
 												</h:commandLink></li>
+
 										</ui:repeat>
-
-
 									</ul></li>
+								<li><a href="#">Turmas</a>
+									<ul>
+										<ui:repeat
+											value="#{professorControleBean.queryfindCursoPorProfessor()}"
+											var="cur">
+											<li><a href="#">#{cur.nome}</a>
+												<ul>
+													<ui:repeat
+														value="#{professorControleBean.disciplinaPorCursoPorProfessor(cur.idCurso)}"
+														var="disc">
+														<li><h:commandLink
+																title="Ver alunos desta disciplina"
+																action="/professor/professor-alunosPorDisciplina"
+																actionListener="#{professorControleListagemBean.updateDisciplinaSession(disc)}"
+																value="#{disc.nome}">
 
+															</h:commandLink></li>
+													</ui:repeat>
+												</ul></li>
 
-
-
-
-
-
-
-
-
-
-
+										</ui:repeat>
+									</ul></li>
 
 								<li><h:commandLink title="Todos meus alunos"
 										action="/professor/professor-todosAlunos"
