--- a/JavaWeb-exAvaliacao/WebContent/template/_template-admin.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/template/_template-admin.xhtml
@@ -20,8 +20,8 @@
 	<link rel="stylesheet"
 		href="https://designmodo.github.io/Flat-UI/dist/css/flat-ui.min.css" />
 	<link rel="stylesheet" href="../resources/css/custom.css" />
-	<link rel="stylesheet" href="../resources/css/sidemenu.css" />
-	<link rel="stylesheet" href="../resources/css/jquery.navgoco.css" />
+	<h:outputStylesheet name="css/datepicker.css" />
+
 	<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" />
 	<script
@@ -32,8 +32,10 @@
 	<script src="../resources/js/inputmask.js" />
 	<script src="../resources/js/jquery.inputmask.js" />
 	<script src="../resources/js/inputmask.date.extensions.js" />
-	<script src="../resources/js/sidemenu.js" />
-	<script src="../resources/js/jquery.navgoco.min.js" />
+	<h:outputScript name="js/datepicker.min.js" />
+	<!-- Include English language -->
+	<h:outputScript name="js/datepicker.en.js" />
+
 
 </h:head>
 <body>
@@ -51,41 +53,50 @@
 					</div>
 					<div id="navbar" class="navbar-collapse collapse">
 
-					
+						<ul class="nav navbar-nav">
+							<li class="dropdown"><a href="#" class="dropdown-toggle"
+								data-toggle="dropdown">Cadastrar <b class="caret"></b></a> <span
+								class="dropdown-arrow"></span>
+								<ul class="dropdown-menu">
 
-						
-							<ul class="nav navbar-nav">
-								<li class="dropdown"><a href="#" class="dropdown-toggle"
-									data-toggle="dropdown">Cadastrar <b class="caret"></b></a> <span
-									class="dropdown-arrow"></span>
-									<ul class="dropdown-menu">
-										<li><a href="../cadastro/cadastro-escola.xhtml">Escola</a></li>
-										<li><a href="../cadastro/cadastro-aluno.xhtml">Aluno</a></li>
-										<li><a href="../cadastro/cadastro-professor.xhtml">Professor</a></li>
-										<li><a href="../cadastro/cadastro-curso.xhtml">Curso</a></li>
-										<li><a href="../cadastro/cadastro-disciplina.xhtml">Disciplina</a></li>
-									</ul></li>
-								<li class="dropdown"><a href="#" class="dropdown-toggle"
-									data-toggle="dropdown">Listar <b class="caret"></b></a> <span
-									class="dropdown-arrow"></span>
-									<ul class="dropdown-menu">
-										<li><a href="../lista/lista-escola.xhtml">Escola</a></li>
-										<li><a href="../lista/lista-aluno.xhtml">Aluno</a></li>
-										<li><a href="../lista/lista-professor.xhtml">Professor</a></li>
-										<li><a href="../lista/lista-curso.xhtml">Curso</a></li>
-										<li><a href="../lista/lista-disciplina.xhtml">Disciplina</a></li>
-									</ul></li>
-							</ul>
-							<h:form style="padding-right:0px; padding-left:0px;"
-								class="navbar-form navbar-right">
+									<li><h:outputLink
+											value="/faces/cadastro/cadastro-escola.xhtml">Escola</h:outputLink>
+									</li>
+									<li><h:outputLink
+											value="/faces/cadastro/cadastro-curso.xhtml">Curso</h:outputLink></li>
+									<li><h:outputLink
+											value="/faces/cadastro/cadastro-disciplina.xhtml">Disciplina</h:outputLink></li>
+									<li><h:outputLink
+											value="/faces/cadastro/cadastro-professor.xhtml">Professor</h:outputLink></li>
+									<li><h:outputLink
+											value="/faces/cadastro/cadastro-aluno.xhtml">Aluno</h:outputLink></li>
+								</ul></li>
 
-								<h:commandButton class="btn btn-success" type="submit"
-									value="Sair" actionListener="#{loginBean.deslogar}" />
-							</h:form>
-							<p class="navbar-text navbar-right">
-								Bem vindo, <a href="#" class="navbar-link">#{displayName}!  </a>
-							</p>
-						
+							<li class="dropdown"><a href="#" class="dropdown-toggle"
+								data-toggle="dropdown">Listar <b class="caret"></b></a> <span
+								class="dropdown-arrow"></span>
+								<ul class="dropdown-menu">
+									<li><h:outputLink value="/faces/lista/lista-escola.xhtml">Escola</h:outputLink>
+									</li>
+									<li><h:outputLink value="/faces/lista/lista-curso.xhtml">Curso</h:outputLink></li>
+									<li><h:outputLink
+											value="/faces/lista/lista-disciplina.xhtml">Disciplina</h:outputLink></li>
+									<li><h:outputLink
+											value="/faces/lista/lista-professor.xhtml">Professor</h:outputLink></li>
+									<li><h:outputLink value="/faces/lista/lista-aluno.xhtml">Aluno</h:outputLink></li>
+								</ul></li>
+
+						</ul>
+						<h:form style="padding-right:0px; padding-left:0px;"
+							class="navbar-form navbar-right">
+
+							<h:commandButton class="btn btn-success" type="submit"
+								value="Sair" actionListener="#{LoginBean.deslogar}" />
+						</h:form>
+						<p class="navbar-text navbar-right">
+							Bem vindo, <a href="#" class="navbar-link">#{displayName}! </a>
+						</p>
+
 
 					</div>
 					<!--/.navbar-collapse -->
@@ -103,41 +114,10 @@
 
 
 
-	<ui:insert name="sidemenu">
-		<div class="top-landing">
-
-
-			<div class="container-fluid">
-
-				<div class="row row-offcanvas row-offcanvas-left">
-
-
-					<script type="text/javascript">
-					$(document).ready(function() {
-					    $('.nav').navgoco();
-					});
-					</script>
-
-
-
-					<div class="col-xs-9">
-						<div class="container">
-							<div class="row">
-								<ui:insert name="content">
-								</ui:insert>
-							</div>
-						</div>
-					</div>
-				</div>
-
-
-			</div>
-			<!--/row-->
-
-			<hr />
-		</div>
-		<!--/.container-->
+	=
+	<ui:insert name="content">
 	</ui:insert>
+
 
 
 
