--- a/JavaWeb-exAvaliacao/WebContent/template/_template.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/template/_template.xhtml
@@ -19,9 +19,9 @@
 		href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
 	<link rel="stylesheet"
 		href="https://designmodo.github.io/Flat-UI/dist/css/flat-ui.min.css" />
-	<link rel="stylesheet" href="../resources/css/custom.css" />
-	<link rel="stylesheet" href="../resources/css/sidemenu.css" />
-	<link rel="stylesheet" href="../resources/css/datepicker.css" />
+	 <h:outputStylesheet name="css/custom.css" />
+	 <h:outputStylesheet name="css/sidemenu.css" />
+	 <h:outputStylesheet name="css/datepicker.css" />
 	<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" />
 	<script
@@ -30,15 +30,17 @@
 		src="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.2.2/js/flat-ui.js" />
 	<script
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKwvaeHolteDKj5kKkg9z1uIXb7kfr-No" />
-	<script src="../resources/js/maps.js" />
-	<script src="../resources/js/custom.js" />
-	<script src="../resources/js/inputmask.js" />
-	<script src="../resources/js/jquery.inputmask.js" />
-	<script src="../resources/js/inputmask.date.extensions.js" />
-	<script src="../resources/js/sidemenu.js" />
-	<script src="../resources/js/datepicker.min.js"></script>
+		
+		
+	 <h:outputScript name="js/maps.js" />
+	 <h:outputScript name="js/custom.js" />
+	<h:outputScript name="js/inputmask.js" />
+	 <h:outputScript name="js/jquery.inputmask.js" />
+	 <h:outputScript name="js/inputmask.date.extensions.js" />
+	 <h:outputScript name="js/sidemenu.js" />
+	 <h:outputScript name="js/datepicker.min.js"/>
 	<!-- Include English language -->
-	<script src="../resources/js/datepicker.en.js" />
+	 <h:outputScript name="js/datepicker.en.js" />
 
 
 
