--- a/JavaWeb-exAvaliacao/WebContent/template/_template-.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/template/_template-.xhtml
@@ -31,10 +31,9 @@
 	<script
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKwvaeHolteDKj5kKkg9z1uIXb7kfr-No" />
 		
-		
 	 <h:outputScript name="js/maps.js" />
 	 <h:outputScript name="js/custom.js" />
-	<h:outputScript name="js/inputmask.js" />
+     <h:outputScript name="js/inputmask.js" />
 	 <h:outputScript name="js/jquery.inputmask.js" />
 	 <h:outputScript name="js/inputmask.date.extensions.js" />
 	 <h:outputScript name="js/sidemenu.js" />
@@ -43,13 +42,11 @@
 	 <h:outputScript name="js/datepicker.en.js" />
 
 
-
-
 </h:head>
 <body>
 	<div id="header">
 		<ui:insert name="header">
-			<nav class="navbar navbar-inverse navbar-fixed-top">
+			<nav class="navbar navbar-inverse navbar-static-top" style="margin-bottom: 0px;">
 				<div class="container">
 					<div class="navbar-header">
 						<button type="button" class="navbar-toggle collapsed"
@@ -60,8 +57,6 @@
 						<a class="navbar-brand" href="#">Pós Graduações XYZ</a>
 					</div>
 					<div id="navbar" class="navbar-collapse collapse">
-
-
 
 						<h:form style="padding-right:0px; padding-left:0px;"
 							class="navbar-form navbar-right">
@@ -76,13 +71,16 @@
 									styleClass="form-control" />
 
 							</div>
+							
 							<p:commandLink class="btn btn-success" type="submit"
 								value="Login" action="#{LoginBean.buscaUsuario()}">
 								<f:ajax render="@form" />
 							</p:commandLink>
 
 						</h:form>
-
+						
+						
+						
 
 					</div>
 					<!--/.navbar-collapse -->
@@ -93,19 +91,11 @@
 
 	<div id="content">
 		<ui:insert name="content">
-    	Content area.  See comments below this line in the source.
-    	<!--  include your content file or uncomment the include below and create content.xhtml in this directory -->
-			<!-- <div> -->
-			<!-- <ui:include src="content.xhtml"/> -->
-			<!-- </div> -->
 		</ui:insert>
 	</div>
 
 	<div id="footer">
 		<ui:insert name="footer">
-    	Footer area.  See comments below this line in the source.
-    	<!--  include your header file or uncomment the include below and create footer.xhtml in this directory -->
-			<!--<ui:include src="footer.xhtml"/>  -->
 		</ui:insert>
 	</div>
 
