--- a/JavaWeb-exAvaliacao/WebContent/template/_template-admin.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/template/_template-admin.xhtml
@@ -13,43 +13,49 @@
 <h:head>
 	<meta charset="utf-8" />
 	<title>Grupo **** - Pós Graduações</title>
-	<link rel="stylesheet"
+<link rel="stylesheet"
 		href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
 	<link rel="stylesheet"
 		href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
 	<link rel="stylesheet"
 		href="https://designmodo.github.io/Flat-UI/dist/css/flat-ui.min.css" />
-	<link rel="stylesheet" href="../resources/css/custom.css" />
-	<h:outputStylesheet name="css/datepicker.css" />
-
+	 <h:outputStylesheet name="css/custom.css" />
+	 <h:outputStylesheet name="css/sidemenu.css" />
+	 <h:outputStylesheet name="css/datepicker.css" />
 	<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" />
 	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-growl/1.0.0/jquery.bootstrap-growl.js" />
+	<script
 		src="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.2.2/js/flat-ui.js" />
-
-	<script src="../resources/js/maps.js" />
-	<script src="../resources/js/custom.js" />
-	<script src="../resources/js/inputmask.js" />
-	<script src="../resources/js/jquery.inputmask.js" />
-	<script src="../resources/js/inputmask.date.extensions.js" />
-	<h:outputScript name="js/datepicker.min.js" />
+	<script
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKwvaeHolteDKj5kKkg9z1uIXb7kfr-No" />
+		
+		
+	 <h:outputScript name="js/maps.js" />
+	 <h:outputScript name="js/custom.js" />
+	<h:outputScript name="js/inputmask.js" />
+	 <h:outputScript name="js/jquery.inputmask.js" />
+	 <h:outputScript name="js/inputmask.date.extensions.js" />
+	 <h:outputScript name="js/sidemenu.js" />
+	 <h:outputScript name="js/datepicker.min.js"/>
 	<!-- Include English language -->
-	<h:outputScript name="js/datepicker.en.js" />
+	 <h:outputScript name="js/datepicker.en.js" />
+
 
 
 </h:head>
 <body>
 	<div id="header">
 		<ui:insert name="header">
-			<nav class="navbar navbar-inverse navbar-fixed-top">
+			<nav class="navbar navbar-inverse navbar-static-top" style="margin-bottom: 0px;">
 				<div class="container">
 					<div class="navbar-header">
 						<button type="button" class="navbar-toggle collapsed"
 							data-toggle="collapse" data-target="#navbar"
-							aria-expanded="false" aria-controls="navbar">
+							aria-expanded="false" aria-controls="navbar"/>
 							<span class="sr-only">Toggle navigation</span>
-						</button>
-						<a class="navbar-brand" href="#">Pós Graduações XYZ</a>
+						<h:link  styleClass="navbar-brand" outcome="/index">Pós Graduações XYZ</h:link>
 					</div>
 					<div id="navbar" class="navbar-collapse collapse">
 
@@ -87,17 +93,17 @@
 								</ul></li>
 
 						</ul>
-						<h:form style="padding-right:0px; padding-left:0px;"
-							class="navbar-form navbar-right">
+						<h:form >
+					<div id="navbar" class="navbar-collapse collapse">
+					
+						<ul class="nav navbar-nav navbar-right">
 
-							<h:commandButton class="btn btn-success" type="submit"
-								value="Sair" actionListener="#{LoginBean.deslogar}" />
-						</h:form>
-						<p class="navbar-text navbar-right">
-							Bem vindo, <a href="#" class="navbar-link">#{displayName}! </a>
-						</p>
-
-
+							<li class="active"><h:commandLink actionListener="#{LoginBean.deslogar()}" > Sair </h:commandLink></li>
+						</ul>
+					
+						<p class="navbar-text pull-right">Bem Vindo #{displayName}</p>
+					</div>
+					</h:form> 
 					</div>
 					<!--/.navbar-collapse -->
 				</div>
@@ -105,32 +111,11 @@
 		</ui:insert>
 	</div>
 
-
-
-
-
-
-
-
-
-
-	=
 	<ui:insert name="content">
 	</ui:insert>
 
-
-
-
-
-
-
-
-
 	<div id="footer">
 		<ui:insert name="footer">
-    	Footer area.  See comments below this line in the source.
-    	<!--  include your header file or uncomment the include below and create footer.xhtml in this directory -->
-			<!--<ui:include src="footer.xhtml"/>  -->
 		</ui:insert>
 	</div>
 
