--- a/JavaWeb-exAvaliacao/WebContent/template/_template-admin.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/template/_template-admin.xhtml
@@ -13,15 +13,17 @@
 <h:head>
 	<meta charset="utf-8" />
 	<title>Grupo **** - Pós Graduações</title>
-<link rel="stylesheet"
+
+	<link rel="stylesheet"
 		href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
 	<link rel="stylesheet"
 		href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
 	<link rel="stylesheet"
 		href="https://designmodo.github.io/Flat-UI/dist/css/flat-ui.min.css" />
-	 <h:outputStylesheet name="css/custom.css" />
-	 <h:outputStylesheet name="css/sidemenu.css" />
-	 <h:outputStylesheet name="css/datepicker.css" />
+	<h:outputStylesheet name="css/custom.css" />
+	<h:outputStylesheet name="css/sidemenu.css" />
+	<h:outputStylesheet name="css/datepicker.css" />
+
 	<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" />
 	<script
@@ -30,32 +32,39 @@
 		src="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.2.2/js/flat-ui.js" />
 	<script
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKwvaeHolteDKj5kKkg9z1uIXb7kfr-No" />
-		
-		
-	 <h:outputScript name="js/maps.js" />
-	 <h:outputScript name="js/custom.js" />
+
+
+	<h:outputScript name="js/maps.js" />
+	<h:outputScript name="js/custom.js" />
 	<h:outputScript name="js/inputmask.js" />
-	 <h:outputScript name="js/jquery.inputmask.js" />
-	 <h:outputScript name="js/inputmask.date.extensions.js" />
-	 <h:outputScript name="js/sidemenu.js" />
-	 <h:outputScript name="js/datepicker.min.js"/>
+	<h:outputScript name="js/jquery.inputmask.js" />
+	<h:outputScript name="js/inputmask.date.extensions.js" />
+	<h:outputScript name="js/sidemenu.js" />
+	<h:outputScript name="js/datepicker.min.js" />
 	<!-- Include English language -->
-	 <h:outputScript name="js/datepicker.en.js" />
+	<h:outputScript name="js/datepicker.en.js" />
 
 
 
 </h:head>
 <body>
+	
+		
+	 <f:facet name="last">
+	<h:outputStylesheet name="css/datatable.css" />
+  </f:facet>
+
 	<div id="header">
 		<ui:insert name="header">
-			<nav class="navbar navbar-inverse navbar-static-top" style="margin-bottom: 0px;">
+			<nav class="navbar navbar-inverse navbar-fixed-top"
+				style="margin-bottom: 0px;">
 				<div class="container">
 					<div class="navbar-header">
 						<button type="button" class="navbar-toggle collapsed"
 							data-toggle="collapse" data-target="#navbar"
-							aria-expanded="false" aria-controls="navbar"/>
-							<span class="sr-only">Toggle navigation</span>
-						<h:link  styleClass="navbar-brand" outcome="/index">Pós Graduações XYZ</h:link>
+							aria-expanded="false" aria-controls="navbar" />
+						<span class="sr-only">Toggle navigation</span>
+						<h:link styleClass="navbar-brand" outcome="/index">Pós Graduações XYZ</h:link>
 					</div>
 					<div id="navbar" class="navbar-collapse collapse">
 
@@ -93,17 +102,18 @@
 								</ul></li>
 
 						</ul>
-						<h:form >
-					<div id="navbar" class="navbar-collapse collapse">
-					
-						<ul class="nav navbar-nav navbar-right">
+						<h:form>
+							<div id="navbar" class="navbar-collapse collapse">
 
-							<li class="active"><h:commandLink actionListener="#{LoginBean.deslogar()}" > Sair </h:commandLink></li>
-						</ul>
-					
-						<p class="navbar-text pull-right">Bem Vindo #{displayName}</p>
-					</div>
-					</h:form> 
+								<ul class="nav navbar-nav navbar-right">
+
+									<li class="active"><h:commandLink
+											actionListener="#{LoginBean.deslogar()}"> Sair </h:commandLink></li>
+								</ul>
+
+								<p class="navbar-text pull-right">Bem Vindo #{displayName}</p>
+							</div>
+						</h:form>
 					</div>
 					<!--/.navbar-collapse -->
 				</div>
