--- a/JavaWeb-exAvaliacao/WebContent/template/_template-aluno.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/template/_template-aluno.xhtml
@@ -19,139 +19,77 @@
 		href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
 	<link rel="stylesheet"
 		href="https://designmodo.github.io/Flat-UI/dist/css/flat-ui.min.css" />
-	<link rel="stylesheet" href="../resources/css/custom.css" />
-	<link rel="stylesheet" href="../resources/css/sidemenu.css" />
-	<link rel="stylesheet" href="../resources/css/jquery.navgoco.css" />
+	<h:outputStylesheet name="css/custom.css" />
+	<h:outputStylesheet name="css/sidemenu.css" />
+	<h:outputStylesheet name="css/datepicker.css" />
 	<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" />
 	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-growl/1.0.0/jquery.bootstrap-growl.js" />
+	<script
 		src="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.2.2/js/flat-ui.js" />
+	<script
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKwvaeHolteDKj5kKkg9z1uIXb7kfr-No" />
 
-	<script src="../resources/js/maps.js" />
-	<script src="../resources/js/custom.js" />
-	<script src="../resources/js/inputmask.js" />
-	<script src="../resources/js/jquery.inputmask.js" />
-	<script src="../resources/js/inputmask.date.extensions.js" />
-	<script src="../resources/js/sidemenu.js" />
-	<script src="../resources/js/jquery.navgoco.min.js" />
+
+	<h:outputScript name="js/maps.js" />
+	<h:outputScript name="js/custom.js" />
+	<h:outputScript name="js/inputmask.js" />
+	<h:outputScript name="js/jquery.inputmask.js" />
+	<h:outputScript name="js/inputmask.date.extensions.js" />
+	<h:outputScript name="js/sidemenu.js" />
+	<h:outputScript name="js/datepicker.min.js" />
+	<!-- Include English language -->
+	<h:outputScript name="js/datepicker.en.js" />
 
 </h:head>
 <body>
 	<div id="header">
 		<ui:insert name="header">
-			<nav class="navbar navbar-inverse navbar-fixed-top">
+			<nav class="navbar navbar-inverse navbar-fixed-top"
+				style="margin-bottom: 0px;">
 				<div class="container">
 					<div class="navbar-header">
-						<button type="button" class="navbar-toggle collapsed"
-							data-toggle="collapse" data-target="#navbar"
-							aria-expanded="false" aria-controls="navbar">
-							<span class="sr-only">Toggle navigation</span>
+						<button type="button" class="navbar-toggle"
+							data-toggle="offcanvas" data-target=".navmenu">
+							<span class="icon-bar"></span> <span class="icon-bar"></span> <span
+								class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="#">Pós Graduações XYZ</a>
-					</div>
-					<div id="navbar" class="navbar-collapse collapse">
-
-
-						<ul class="nav navbar-nav">
-							<li><a class="active" href="../aluno/aluno-dashboard.xhtml">Dashboard</a></li>
-						</ul>
-
-						<h:form style="padding-right:0px; padding-left:0px;"
-							class="navbar-form navbar-right">
-
-							<h:commandButton class="btn btn-success" type="submit"
-								value="Sair" actionListener="#{loginBean.deslogar}" />
-						</h:form>
-						<p class="navbar-text navbar-right">
-							Bem vindo, <a href="#" class="navbar-link">#{displayName}! </a>
-						</p>
-
+						<h:link styleClass="navbar-brand" outcome="/index">Pós Graduações XYZ</h:link>
 
 					</div>
+					<h:form>
+						<div id="navbar" class="navbar-collapse collapse">
+							<ul class="nav navbar-nav">
+								<li class="active"><a href="/JavaWeb-exAvaliacao/aluno">Boletim
+										<span class="sr-only">(current)</span>
+								</a></li>
+							</ul>
+
+							<ul class="nav navbar-nav navbar-right">
+
+								<li class="active"><h:commandLink
+										actionListener="#{LoginBean.deslogar()}"> Sair </h:commandLink></li>
+							</ul>
+
+							<p class="navbar-text pull-right">Bem Vindo #{displayName}</p>
+						</div>
+					</h:form>
 					<!--/.navbar-collapse -->
 				</div>
 			</nav>
 		</ui:insert>
 	</div>
 
+	<ui:insert name="content">
 
-
-
-
-
-
-
-
-
-	<ui:insert name="sidemenu">
-		<div class="top-landing">
-
-
-			<div class="container-fluid">
-
-				<div class="row row-offcanvas row-offcanvas-left">
-
-
-					<script type="text/javascript">
-					$(document).ready(function() {
-					    $('.nav').navgoco();
-					});
-					</script>
-
-
-
-					<div class="col-xs-2  sidebar-offcanvas " id="sidebar">
-						<h:form>
-
-							<ul id="demo2" class="nav">
-								<li class="active"><a href="#">Menu</a></li>
-
-								<li><h:commandLink title="Ver notas"
-										action="/aluno/aluno-disciplinaPorCurso" value="Ver Notas"/></li>
-							</ul>
-						</h:form>
-					</div>
-					<div class="col-xs-1 " id="toggle-canvas">
-						<p class="pull-left">
-							<button type="button" id="" class="btn btn-primary btn-md"
-								data-toggle="offcanvas">
-								<i class="fa fa-bars fa-lg"></i>
-							</button>
-						</p>
-
-					</div>
-
-					<div class="col-xs-9">
-						<div class="container">
-							<div class="row">
-								<ui:insert name="content">
-								</ui:insert>
-							</div>
-						</div>
-					</div>
-				</div>
-
-
-			</div>
-			<!--/row-->
-
-			<hr />
-		</div>
-		<!--/.container-->
 	</ui:insert>
-
-
-
-
-
 
 
 
 	<div id="footer">
 		<ui:insert name="footer">
-    	Footer area.  See comments below this line in the source.
-    	<!--  include your header file or uncomment the include below and create footer.xhtml in this directory -->
-			<!--<ui:include src="footer.xhtml"/>  -->
+
 		</ui:insert>
 	</div>
 
