Refatoração + fix login + initial value 1001 usuario

--- a/JavaWeb-exAvaliacao/WebContent/template/_template-.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/template/_template-.xhtml
@@ -77,8 +77,7 @@
 							<ul class="nav navbar-nav navbar-right navbar-form-input">
 
 								<li class="active "><p:commandLink type="submit"
-										value="Login" styleClass="" action="#{LoginBean.buscaUsuario()}" ajax="false"> Sair 	<f:ajax
-											render="@form" />
+										value="Login" styleClass="" action="#{LoginBean.buscaUsuario()}"> Sair 	
 									</p:commandLink></li>
 							</ul>
 
@@ -105,6 +104,7 @@
 
 	<div id="footer">
 		<ui:insert name="footer">
+		
 		</ui:insert>
 	</div>
 
